--- a/lana/notification/src/email/templates/views/under_margin_call.hbs
+++ b/lana/notification/src/email/templates/views/under_margin_call.hbs
@@ -5,14 +5,17 @@
         {{subject}}
     </h2>
     <p style="margin-top: 0; margin-bottom: 20px; font-size: 16px; line-height: 1.5; text-align: left;">
-        A partial liquidation has been initiated for the following credit facility:
+        The margin call collateralization threshold has been breached for the following credit facility:
     </p>
     <ul style="margin-top: 0; margin-bottom: 20px; font-size: 16px; line-height: 1.5; text-align: left;">
         <li>Facility ID: {{facility_id}}</li>
-        <li>Customer Email: {{customer_email}}</li>
-        <li>Trigger Price: {{trigger_price}}</li>
-        <li>Expected to Receive: {{expected_to_receive}}</li>
-        <li>Estimated to Liquidate: {{estimated_to_liquidate}} BTC</li>
+        <li>Recorded At: {{recorded_at}}</li>
+        <li>Effective Date: {{effective}}</li>
+        <li>BTC Collateral: {{collateral}}</li>
+        <li>Outstanding (Disbursed): {{outstanding_disbursed}}</li>
+        <li>Outstanding (Interest): {{outstanding_interest}}</li>
+        <li>Total Outstanding: {{total_outstanding}}</li>
+        <li>Reference Price (BTC/USD): {{price}}</li>
     </ul>
     <p style="margin-top: 0; margin-bottom: 20px; font-size: 16px; line-height: 1.5; text-align: left;">
         <a href="{{facility_url}}" target="_blank" style="color: #007bff; text-decoration: none;">View in Admin Panel</a>
