chore: use public-id in urls

--- a/lana/notification/src/email/templates/views/under_margin_call.hbs
+++ b/lana/notification/src/email/templates/views/under_margin_call.hbs
@@ -18,7 +18,7 @@
         <li>Reference Price (BTC/USD): {{price}}</li>
     </ul>
     <p style="margin-top: 0; margin-bottom: 20px; font-size: 16px; line-height: 1.5; text-align: left;">
-        <a href="{{facility_url}}" target="_blank" style="color: #007bff; text-decoration: none;">View in Admin Panel</a>
+        <a href="{{facility_url}}" target="_blank" style="color: #007bff; text-decoration: none;">View facility in Admin Panel</a>
     </p>
     </td>
 </tr>
