--- a/lana/notification/src/email/templates/views/partial_liquidation.hbs
+++ b/lana/notification/src/email/templates/views/partial_liquidation.hbs
@@ -14,7 +14,8 @@
         <li>Estimated to Liquidate: {{estimated_to_liquidate}} BTC</li>
     </ul>
     <p style="margin-top: 0; margin-bottom: 20px; font-size: 16px; line-height: 1.5; text-align: left;">
-        <a href="{{facility_url}}" target="_blank" style="color: #007bff; text-decoration: none;">View in Admin Panel</a>
+        <a href="{{facility_url}}" target="_blank" style="color: #007bff; text-decoration: none;">View facility in Admin Panel</a>
+        <a href="{{liquidation_url}}" target="_blank" style="color: #007bff; text-decoration: none;">View liquidation in Admin Panel</a>
     </p>
     </td>
 </tr>
