chore: address review and clean templates

--- a/lana/notification/src/email/templates/views/under_margin_call.hbs
+++ b/lana/notification/src/email/templates/views/under_margin_call.hbs
@@ -5,7 +5,7 @@
         {{subject}}
     </h2>
     <p style="margin-top: 0; margin-bottom: 20px; font-size: 16px; line-height: 1.5; text-align: left;">
-        The margin call collateralization threshold has been breached for the following credit facility:
+        The margin call threshold has been breached for the following credit facility:
     </p>
     <ul style="margin-top: 0; margin-bottom: 20px; font-size: 16px; line-height: 1.5; text-align: left;">
         <li>Facility ID: {{facility_id}}</li>
