chore: remove urls from mails

--- a/lana/notification/src/email/templates/views/under_margin_call.hbs
+++ b/lana/notification/src/email/templates/views/under_margin_call.hbs
@@ -9,7 +9,6 @@
     </p>
     <ul style="margin-top: 0; margin-bottom: 20px; font-size: 16px; line-height: 1.5; text-align: left;">
         <li>Facility ID: {{facility_id}}</li>
-        <li>Recorded At: {{recorded_at}}</li>
         <li>Effective Date: {{effective}}</li>
         <li>BTC Collateral: {{collateral}}</li>
         <li>Outstanding (Disbursed): {{outstanding_disbursed}}</li>
@@ -18,7 +17,7 @@
         <li>Reference Price (BTC/USD): {{price}}</li>
     </ul>
     <p style="margin-top: 0; margin-bottom: 20px; font-size: 16px; line-height: 1.5; text-align: left;">
-        <a href="{{facility_url}}" target="_blank" style="color: #007bff; text-decoration: none;">View facility in Admin Panel</a>
+        <strong>Action Required:</strong> To avoid liquidation of your collateral, please take one of the following actions immediately: (1) deposit additional BTC collateral to your facility, or (2) repay part or all of your outstanding loan amount.
     </p>
     </td>
 </tr>
