--- a/dev/entity-rollups/src/templates/rollup_trigger_function.sql.hbs
+++ b/dev/entity-rollups/src/templates/rollup_trigger_function.sql.hbs
@@ -25,6 +25,7 @@ BEGIN
   new_row.version := NEW.sequence;
   new_row.created_at := COALESCE(current_row.created_at, NEW.recorded_at);
   new_row.modified_at := NEW.recorded_at;
+  new_row.event_type := NEW.recorded_at;
 
   -- Initialize fields with default values if this is a new record
   IF current_row.id IS NULL THEN{{#each fields}}
@@ -44,14 +45,16 @@ BEGIN
     id,
     version,
     created_at,
-    modified_at{{#each fields}},
+    modified_at,
+    event_type{{#each fields}},
     {{this.name}}{{/each}}
   )
   VALUES (
     new_row.id,
     new_row.version,
     new_row.created_at,
-    new_row.modified_at{{#each fields}},
+    new_row.modified_at,
+    new_row.event_type{{#each fields}},
     new_row.{{this.name}}{{/each}}
   );
 
